// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AliasSelect /> spec renders the component and remove duplicate aliases 1`] = `
<div
  aria-expanded="false"
  aria-haspopup="listbox"
  class="euiComboBox"
  role="combobox"
>
  <div
    class="euiFormControlLayout"
  >
    <div
      class="euiFormControlLayout__childrenWrapper"
    >
      <div
        class="euiComboBox__inputWrap euiComboBox__inputWrap-isClearable"
        data-test-subj="comboBoxInput"
        tabindex="-1"
      >
        <p
          class="euiComboBoxPlaceholder"
        >
          Select aliases or specify new aliases.
        </p>
        <div
          class="euiComboBox__input"
          style="font-size: 14px; display: inline-block;"
        >
          <input
            aria-controls=""
            data-test-subj="comboBoxSearchInput"
            role="textbox"
            style="box-sizing: content-box; width: 2px;"
            value=""
          />
          <div
            style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
          />
        </div>
      </div>
      <div
        class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
      >
        <button
          aria-label="Open list of options"
          class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
          data-test-subj="comboBoxToggleListButton"
          type="button"
        >
          EuiIconMock
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<AliasSelect /> spec renders with error 1`] = `
<div>
  <div
    aria-expanded="false"
    aria-haspopup="listbox"
    class="euiComboBox"
    role="combobox"
  >
    <div
      class="euiFormControlLayout"
    >
      <div
        class="euiFormControlLayout__childrenWrapper"
      >
        <div
          class="euiComboBox__inputWrap euiComboBox__inputWrap-isClearable"
          data-test-subj="comboBoxInput"
          tabindex="-1"
        >
          <p
            class="euiComboBoxPlaceholder"
          >
            Select aliases or specify new aliases.
          </p>
          <div
            class="euiComboBox__input"
            style="font-size: 14px; display: inline-block;"
          >
            <input
              aria-controls=""
              data-test-subj="comboBoxSearchInput"
              role="textbox"
              style="box-sizing: content-box; width: 2px;"
              value=""
            />
            <div
              style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
            />
          </div>
        </div>
        <div
          class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
        >
          <button
            aria-label="Open list of options"
            class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
            data-test-subj="comboBoxToggleListButton"
            type="button"
          >
            EuiIconMock
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
